# ccds

./: .gitignore  README.md  cookiecutter.json
docs/docs/: index.md
{{ cookiecutter.repo_name }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/utils/: logger.py
